--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
     <head>
         <title>Js test</title>
+        <link rel="stylesheet" href="style/style.css"  type="text/css" >
         <script type="text/javascript" src="lib/vendor/jquery-2.1.0.min.js"></script>
         <script type="text/javascript" src="lib/app.js"></script>
+        <script type="text/javascript" src="lib/system.js"></script>
         <script type="text/javascript" src="lib/flicr.js"></script>
     </head>
     <body>
-
+        <div id="content">
+            123
+        </div>
+        <div id="loader"></div>
+        <div id="error"></div>
     </body>
 </html>
